<resources>
    <string name="app_name">Tip Time</string>
    <string name="Calculate">Calculate</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="Tip_Amount">Tip Amount: %s</string>
    <string name="Tip">Tip Amount</string>
    <string name="CostOfService">Cost Of Service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="do_you_want_to_round_up_your_tip">Do you want to round up your Tip?</string>
    <string name="label">label</string>
</resources>